# Library_Network_Sockets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  client.cpp  server.cpp
libs/: CMakeLists.txt  libs.c  libs.h
libs/cFILE/: CMakeLists.txt  cFILE.c  cFILE.h
libs/cGETOPT/: CMakeLists.txt  getopt.c
libs/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h
libs/cLOG/: CMakeLists.txt  cLOG.c  cLOG.h
src/: CMakeLists.txt  Config.h.in  SocketCommon.hpp  SocketCore.cpp  SocketCore.hpp  SocketError.cpp  SocketError.hpp  sock_defines.hpp  sock_exceptions.hpp  sock_includes_api.hpp
src/client/: CMakeLists.txt  SocketClient.cpp  SocketClient.hpp  sock_client.cpp  sock_client.hpp
src/core/: CMakeLists.txt  SocketCommon.cpp  SocketCommon.hpp  SocketCore.cpp  SocketCore.hpp  SocketError.cpp  SocketError.hpp  sock_core.cpp  sock_core.hpp  sock_exceptions.cpp
src/server/: CMakeLists.txt  SocketServer.cpp  SocketServer.hpp  sock_connected_client.cpp  sock_connected_client.hpp  sock_server.cpp  sock_server.hpp
src/server/actions/: Broadcast.cpp  Broadcast.hpp  Custom.cpp  Custom.hpp  action_broadcast.cpp  action_broadcast.hpp  actions.md  help.cpp  help.hpp
src/server/utils/: utils.hpp
tests/: CMakeLists.txt  first_test.cpp  test_main.cpp
tests/core/: test_sock_core.cpp
